kubernetes/apps/default/adguard/app/service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard-network-application
  namespace: system
subsets:
  - addresses:
      - ip: 192.168.40.254
    ports:
      - port: 3000
        protocol: TCP
