kubernetes/apps/default/adguard/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-network-application
spec:
  ingressClassName: internal
  rules:
    - host: &host adguard.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 3000
  tls:
    - hosts:
        - *host
